--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
                 <div id="control">
                     <div onclick="playprev()"><a><i class="fa fa-chevron-circle-left fa-lg"></i></a></div>
-                    <div class='' id='loader'><a onclick="play_pause()" id='play_pause'><i id='song_status' class="fa fa-pause fa-lg"></i></a></div>
+                    <div class='' id='loader'><a onclick="play_pause()" id='play_pause'><i id='song_status' class="fa fa-play fa-lg"></i></a></div>
                     <div>
                         <a onclick="playnext()"><i class="fa fa-chevron-circle-right fa-lg"></i></a>
                     </div>
