--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="green" />
+    <meta
+      name="description"
+      content="A Music App for Free"
+    />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="manifest.json" />
     <title>Suno Dil se</title>
     <link rel="stylesheet" href="main.css"/>
     <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
@@ -64,6 +76,13 @@
         
 
     </div>
+    <script>
+        if('serviceWorker' in navigator) {
+  navigator.serviceWorker
+           .register('/sw.js')
+           .then(function() { console.log("Service Worker Registered"); });
+}
+    </script>
 <script src="main.js">
 </script>
 </body>
