--- a/public/index.html
+++ b/public/index.html
@@ -77,11 +77,11 @@
 
     </div>
     <script>
-//         if('serviceWorker' in navigator) {
-//   navigator.serviceWorker
-//            .register('/sw.js')
-//            .then(function() { console.log("Service Worker Registered"); });
-// }
+        if('serviceWorker' in navigator) {
+  navigator.serviceWorker
+           .register('/sw.js')
+           .then(function() { console.log("Service Worker Registered"); });
+}
     </script>
 <script src="main.js">
 </script>
