--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="A Music App for Free"
     />
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
